[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/game/character_drivers/AiDriver.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/character_drivers/aistates/StageAwareState.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/character_drivers/aistates/Attack.gd" type="Script" id=3]
[ext_resource path="res://scenes/game/character_drivers/aistates/GetWeapon.gd" type="Script" id=4]
[ext_resource path="res://scenes/game/character_drivers/aistates/HoldPosition.gd" type="Script" id=5]
[ext_resource path="res://scenes/game/character_drivers/aistates/FollowPlayer.gd" type="Script" id=6]
[ext_resource path="res://scenes/game/character_drivers/aistates/Flee.gd" type="Script" id=7]
[ext_resource path="res://scenes/game/character_drivers/aistates/Think.gd" type="Script" id=8]

[node name="Driver" type="Node"]
script = ExtResource( 1 )
start_state = NodePath("Think")
navigation_path = NodePath("../../../PathFinder")
reaction_time = 0.3
courage = 0.05

[node name="Think" type="Node" parent="."]
script = ExtResource( 8 )

[node name="GetWeapon" type="Node" parent="."]
script = ExtResource( 4 )

[node name="GetBonus" type="Node" parent="."]
script = ExtResource( 2 )

[node name="FollowPlayer" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Attack" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Flee" type="Node" parent="."]
script = ExtResource( 7 )

[node name="HoldPosition" type="Node" parent="."]
script = ExtResource( 5 )
